--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,9 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
+	compile 'com.alibaba:fastjson:1.2.8'
+	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
