--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,6 @@ task wrapper(type: Wrapper) {
 	gradleVersion = '4.0'
 }
 
-bootJar {
-	baseName = 'gs-rest-service'
-	version =  '0.1.0'
-}
-
-
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
@@ -40,8 +34,11 @@ repositories {
 }
 
 dependencies {
+	compile('io.springfox:springfox-swagger2:2.9.2')
+	compile('io.springfox:springfox-swagger-ui:2.9.2')
 	compile 'com.alibaba:fastjson:1.2.8'
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile 'org.projectlombok:lombok:1.16.18'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
