--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ repositories {
 }
 
 dependencies {
-	compile('io.springfox:springfox-swagger2:2.9.2')
-	compile('io.springfox:springfox-swagger-ui:2.9.2')
+	compile('io.springfox:springfox-swagger2:latest.release')
+	compile('io.springfox:springfox-swagger-ui:latest.release')
 	compile 'com.alibaba:fastjson:1.2.8'
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web')
