--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,5 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile 'org.projectlombok:lombok:1.16.18'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile 'org.apache.poi:poi-ooxml:3.14'
 }
