--- a/build.gradle
+++ b/build.gradle
@@ -42,4 +42,5 @@ dependencies {
 	compile 'org.projectlombok:lombok:1.16.18'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile 'org.apache.poi:poi-ooxml:3.14'
+	compile 'org.springframework.cloud:spring-cloud-starter-feign:1.2.2.RELEASE'
 }
