--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,5 @@ spring:
 server:
   port: 8888
 
-structUrl: http://47.97.42.87:8081/swagger-ui.html#/同步接口展示用/onlyPhonetypeUsingPOST
+
+structUrl: http://47.97.42.87:8081
