--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile 'org.apache.poi:poi-ooxml:3.14'
 
-
+	compileOnly "org.springframework.boot:spring-boot-configuration-processor"
 //	compile 'org.springframework.cloud:spring-cloud-starter-feign:latest.release'
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.0.0.RELEASE'
 }
